<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_timeline">

    <fragment
        android:id="@+id/nav_timeline"
        android:name="com.notificationmaster.ui.timeline.TimelineFragment"
        android:label="@string/nav_timeline"
        tools:layout="@layout/fragment_timeline">

        <action
            android:id="@+id/action_timeline_to_detail"
            app:destination="@id/nav_detail" />

    </fragment>

    <fragment
        android:id="@+id/nav_archive"
        android:name="com.notificationmaster.ui.archive.ArchiveFragment"
        android:label="@string/nav_archive"
        tools:layout="@layout/fragment_archive" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.notificationmaster.ui.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search">

        <argument
            android:name="query"
            app:argType="string"
            android:defaultValue="" />

    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.notificationmaster.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_settings_to_home"
            app:destination="@id/nav_home" />

    </fragment>

    <!-- 環境資訊頁面（從設定進入） -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.notificationmaster.ui.main.HomeFragment"
        android:label="@string/environment_info"
        tools:layout="@layout/fragment_home" />

    <!-- 通知詳情頁面 -->
    <fragment
        android:id="@+id/nav_detail"
        android:name="com.notificationmaster.ui.detail.NotificationDetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_notification_detail">

        <argument
            android:name="notificationId"
            app:argType="long" />

    </fragment>

</navigation>
